# Sklad

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  document.h  document_type.h  final.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mutex.cpp  product.h  signals.cpp  templates.cpp  warehouse.cpp  warehouse.h
docs/: project_architecture.mmd
include/: Customer.h  Employee.h  Inventory.h  Manager.h  Operation.h  Order.h  ProductOrder.h  Rack.h  Receipt.h  Relationships.h  Storekeeper.h  Supplier.h  WarehouseSystem.h
test_server/: auth_manager.py  main.py
